sistemato il css

--- a/paginalogin.html
+++ b/paginalogin.html
@@ -16,6 +16,7 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
             <button type="submit">Login</button>
+            <a href="./paginaregistrazione.html">Non hai un account? Registrati qui!</a>
         </form>
     </div>
 </body>
