--- a/paginaregistrazione.html
+++ b/paginaregistrazione.html
@@ -25,6 +25,6 @@
         <input type="email" id="email" name="email" required>
         
         <button type="submit">Registrati</button>
-    
+    </form>
 </body>
 </html>
