--- a/paginalogin.html
+++ b/paginalogin.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -19,6 +20,38 @@
             <a href="./paginaregistrazione.html">Non hai un account? Registrati qui!</a>
         </form>
     </div>
+
+    <div class="social-table container-fluid">
+        <div class="row text-center py-3">
+            <div class="col">
+                <a href="https://www.instagram.com" target="_blank">
+                    <i class="bi bi-instagram fs-2"></i>
+                    <p>Instagram</p>
+                </a>
+            </div>
+            <div class="col">
+                <a href="https://www.facebook.com" target="_blank">
+                    <i class="bi bi-facebook fs-2"></i>
+                    <p>Facebook</p>
+                </a>
+            </div>
+            <div class="col">
+                <a href="https://www.tiktok.com" target="_blank">
+                    <i class="bi bi-tiktok fs-2"></i>
+                    <p>TikTok</p>
+                </a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col text-center">
+                <p>&copy; 2025 Ristorante Ciardo. Tutti i diritti riservati. È vietata la riproduzione, distribuzione o utilizzo non autorizzato dei contenuti di questa pagina.</p>
+            </div>
+        </div>
+    </div>
+    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    
 </body>
 
 </html>
